convert -idirafter to -isystem, as recommended by cgd in PR 11843. most of the list in that PR were already done.